feat: Improved UI dramtically. Happy Birthday to Goldman ji

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>For Ms BwB</title>
+    <style>
+      body{
+        height: 100vh;
+        background: #70e1f5;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to bottom, #ffd194, #70e1f5);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to bottom, #ffd194, #70e1f5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
